Refactor styles and update HTML structure

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             position: relative;
         }
 
-        /* Canvas untuk background hati jatuh */
         #hearts-canvas {
             position: fixed;
             top: 0;
@@ -44,11 +43,6 @@
         }
 
         /* SLIDE 1 */
-        .card-initial {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-
         h1.main-title {
             font-family: 'Pacifico', cursive;
             color: #d63384;
@@ -82,30 +76,24 @@
             box-shadow: 0 8px 0 #c9184a;
         }
 
-        .btn-yes:active {
-            transform: translateY(4px);
-            box-shadow: 0 4px 0 #c9184a;
-        }
-
         .btn-no {
             background: #6c757d;
             color: white;
-            position: absolute; /* Untuk menghindar */
+            position: absolute;
             box-shadow: 0 8px 0 #495057;
             z-index: 999;
         }
 
-        /* SLIDE 2 (SESUAI FOTO) */
+        /* SLIDE 2 */
         .hidden { display: none !important; }
 
         .top-text {
-            color: white;
+            color: #d63384;
             font-size: 1.2rem;
             position: fixed;
             top: 30px;
             width: 100%;
             text-align: center;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
         }
 
         .yay-text {
@@ -117,69 +105,87 @@
 
         .hug-card {
             background: white;
-            width: 250px;
-            height: 320px;
+            width: 280px;
+            height: 350px;
             margin: 0 auto;
-            border-radius: 20px;
+            border-radius: 30px;
             padding: 20px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.05);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
+            position: relative;
         }
 
         .hugging-title {
             color: #d63384;
             font-size: 1.5rem;
             font-weight: bold;
+            margin-top: 10px;
         }
 
-        /* Animasi Pelukan SVG Custom */
-        .hug-svg-container {
+        .hug-animation-box {
             position: relative;
-            width: 150px;
-            height: 150px;
+            width: 100%;
+            height: 180px;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .stickman {
+        .char {
+            width: 100px;
             position: absolute;
-            bottom: 10px;
-            width: 70px;
-            transition: all 0.5s ease;
+            transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
-        .man-left { left: 10px; }
-        .man-right { right: 10px; transform: scaleX(-1); }
+        .char-left {
+            left: -100px; /* Mulai dari luar kiri */
+        }
 
-        /* Posisi Berpelukan */
-        .hugging .man-left { left: 45px; z-index: 2; }
-        .hugging .man-right { right: 45px; z-index: 1; }
+        .char-right {
+            right: -100px; /* Mulai dari luar kanan */
+            transform: scaleX(-1);
+        }
+
+        /* Saat berpelukan */
+        .hugging .char-left {
+            left: 55px;
+        }
+
+        .hugging .char-right {
+            right: 55px;
+            transform: scaleX(-1);
+        }
 
         .hearts-pop {
             position: absolute;
-            top: 20px;
-            width: 100%;
-            text-align: center;
+            top: 10px;
+            font-size: 1.5rem;
             opacity: 0;
+            z-index: 5;
         }
 
         .hugging .hearts-pop {
-            animation: fadeInOut 1.5s infinite;
+            animation: popUp 1.5s infinite;
         }
 
-        @keyframes fadeInOut {
-            0%, 100% { opacity: 0; transform: translateY(0); }
-            50% { opacity: 1; transform: translateY(-20px); }
+        @keyframes popUp {
+            0% { opacity: 0; transform: translateY(0) scale(0.5); }
+            50% { opacity: 1; transform: translateY(-30px) scale(1.2); }
+            100% { opacity: 0; transform: translateY(-50px) scale(1); }
         }
 
         .sent-btn {
             background: #ffccd5;
             color: #d63384;
-            padding: 8px 25px;
-            border-radius: 20px;
-            font-size: 0.9rem;
+            padding: 10px 30px;
+            border-radius: 25px;
+            font-size: 1rem;
             font-weight: bold;
+            margin-bottom: 10px;
         }
 
         .bottom-text {
@@ -189,7 +195,6 @@
             font-weight: bold;
         }
 
-        /* Responsif untuk Mobile */
         @media (max-width: 480px) {
             h1.main-title { font-size: 1.8rem; }
             .btn { padding: 12px 30px; font-size: 1.2rem; }
@@ -215,16 +220,10 @@
         <div class="hug-card">
             <div class="hugging-title">Hugging time!</div>
             
-            <div class="hug-svg-container" id="hugAnimation">
+            <div class="hug-animation-box" id="hugBox">
                 <div class="hearts-pop">💖💖💖</div>
-                <svg class="stickman man-left" viewBox="0 0 100 100">
-                    <circle cx="50" cy="30" r="15" fill="none" stroke="black" stroke-width="3"/>
-                    <path d="M50 45 L50 80 M50 55 L30 70 M50 55 L70 70 M50 80 L35 95 M50 80 L65 95" fill="none" stroke="black" stroke-width="3"/>
-                </svg>
-                <svg class="stickman man-right" viewBox="0 0 100 100">
-                    <circle cx="50" cy="30" r="15" fill="none" stroke="black" stroke-width="3"/>
-                    <path d="M50 45 L50 80 M50 55 L30 70 M50 55 L70 70 M50 80 L35 95 M50 80 L65 95" fill="none" stroke="black" stroke-width="3"/>
-                </svg>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="char char-left" alt="character">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="char char-right" alt="character">
             </div>
 
             <div class="sent-btn">Sent with love!</div>
@@ -237,41 +236,33 @@
         const noBtn = document.getElementById('noBtn');
         const slide1 = document.getElementById('slide1');
         const slide2 = document.getElementById('slide2');
-        const hugAnimation = document.getElementById('hugAnimation');
+        const hugBox = document.getElementById('hugBox');
 
-        // FUNGSI TOMBOL NO MENGHINDAR
+        // Fungsi No Menghindar
         function moveButton() {
-            // Margin agar tidak terlalu ke pinggir layar
-            const margin = 50;
-            const maxX = window.innerWidth - noBtn.offsetWidth - margin;
-            const maxY = window.innerHeight - noBtn.offsetHeight - margin;
-
-            const randomX = Math.max(margin, Math.floor(Math.random() * maxX));
-            const randomY = Math.max(margin, Math.floor(Math.random() * maxY));
-
+            const maxX = window.innerWidth - noBtn.offsetWidth - 50;
+            const maxY = window.innerHeight - noBtn.offsetHeight - 50;
+            const randomX = Math.max(50, Math.floor(Math.random() * maxX));
+            const randomY = Math.max(50, Math.floor(Math.random() * maxY));
             noBtn.style.left = randomX + 'px';
             noBtn.style.top = randomY + 'px';
         }
 
         noBtn.addEventListener('mouseenter', moveButton);
-        noBtn.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            moveButton();
-        });
+        noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveButton(); });
 
-        // PINDAH KE SLIDE 2
+        // Fungsi Yes
         function showSlide2() {
             slide1.classList.add('hidden');
             slide2.classList.remove('hidden');
-            document.body.style.background = "linear-gradient(to bottom, #ffccd5, #fff0f3)";
             
-            // Jalankan animasi pelukan setelah kartu muncul
+            // Memberi jeda kecil agar transisi slide selesai, lalu pelukan
             setTimeout(() => {
-                hugAnimation.classList.add('hugging');
-            }, 500);
+                hugBox.classList.add('hugging');
+            }, 300);
         }
 
-        // BACKGROUND HATI JATUH
+        // Particle Hati
         const canvas = document.getElementById('hearts-canvas');
         const ctx = canvas.getContext('2d');
         let hearts = [];
@@ -283,43 +274,34 @@
 
         class Heart {
             constructor() {
+                this.reset();
+            }
+            reset() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 15 + 10;
-                this.speed = Math.random() * 2 + 1;
-                this.opacity = Math.random() * 0.5 + 0.3;
+                this.size = Math.random() * 10 + 10;
+                this.speed = Math.random() * 1.5 + 0.5;
+                this.opacity = Math.random() * 0.4 + 0.2;
             }
             draw() {
                 ctx.globalAlpha = this.opacity;
                 ctx.fillStyle = '#ff4d6d';
-                ctx.beginPath();
-                const topCurveHeight = this.size * 0.3;
-                ctx.moveTo(this.x, this.y + topCurveHeight);
-                ctx.bezierCurveTo(this.x, this.y, this.x - this.size / 2, this.y, this.x - this.size / 2, this.y + topCurveHeight);
-                ctx.bezierCurveTo(this.x - this.size / 2, this.y + (this.size + topCurveHeight) / 2, this.x, this.y + (this.size + topCurveHeight) / 2, this.x, this.y + this.size);
-                ctx.bezierCurveTo(this.x, this.y + (this.size + topCurveHeight) / 2, this.x + this.size / 2, this.y + (this.size + topCurveHeight) / 2, this.x + this.size / 2, this.y + topCurveHeight);
-                ctx.bezierCurveTo(this.x + this.size / 2, this.y, this.x, this.y, this.x, this.y + topCurveHeight);
-                ctx.fill();
+                ctx.font = `${this.size}px serif`;
+                ctx.fillText('❤️', this.x, this.y);
             }
             update() {
                 this.y += this.speed;
-                if (this.y > canvas.height) {
-                    this.y = -20;
-                    this.x = Math.random() * canvas.width;
-                }
+                if (this.y > canvas.height) this.reset();
             }
         }
 
         function init() {
-            for (let i = 0; i < 30; i++) hearts.push(new Heart());
+            for (let i = 0; i < 40; i++) hearts.push(new Heart());
         }
 
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            hearts.forEach(h => {
-                h.update();
-                h.draw();
-            });
+            hearts.forEach(h => { h.update(); h.draw(); });
             requestAnimationFrame(animate);
         }
 
