--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         }
 
         /* SLIDE 1 */
+        .dear-someone {
+            font-family: 'Quicksand', sans-serif;
+            color: #d63384;
+            font-size: 1.2rem;
+            font-weight: bold;
+            background: #ffccd5;
+            display: inline-block;
+            padding: 5px 20px;
+            border-radius: 20px;
+            margin-bottom: 10px;
+        }
+
         h1.main-title {
             font-family: 'Pacifico', cursive;
             color: #d63384;
@@ -57,6 +69,7 @@
             align-items: center;
             gap: 20px;
             margin-top: 20px;
+            min-height: 100px; /* Ruang untuk tombol No menghindar */
         }
 
         .btn {
@@ -82,6 +95,7 @@
             position: absolute;
             box-shadow: 0 8px 0 #495057;
             z-index: 999;
+            transition: left 0.2s ease, top 0.2s ease;
         }
 
         /* SLIDE 2 */
@@ -115,7 +129,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            position: relative;
         }
 
         .hugging-title {
@@ -125,50 +138,25 @@
             margin-top: 10px;
         }
 
-        .hug-animation-box {
+        .hug-photo-box {
             position: relative;
             width: 100%;
             height: 180px;
-            overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .char {
-            width: 100px;
-            position: absolute;
-            transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
-
-        .char-left {
-            left: -100px; /* Mulai dari luar kiri */
-        }
-
-        .char-right {
-            right: -100px; /* Mulai dari luar kanan */
-            transform: scaleX(-1);
-        }
-
-        /* Saat berpelukan */
-        .hugging .char-left {
-            left: 55px;
-        }
-
-        .hugging .char-right {
-            right: 55px;
-            transform: scaleX(-1);
+        .photo-img {
+            width: 180px; /* Ukuran foto diam */
+            height: auto;
+            border-radius: 10px;
         }
 
         .hearts-pop {
             position: absolute;
-            top: 10px;
+            top: 0;
             font-size: 1.5rem;
-            opacity: 0;
-            z-index: 5;
-        }
-
-        .hugging .hearts-pop {
             animation: popUp 1.5s infinite;
         }
 
@@ -206,6 +194,7 @@
     <canvas id="hearts-canvas"></canvas>
 
     <div class="container" id="slide1">
+        <div class="dear-someone">Dear Someone</div>
         <h1 class="main-title">Will you be my Valentine?</h1>
         <div class="btn-group">
             <button class="btn btn-yes" onclick="showSlide2()">YES!</button>
@@ -220,10 +209,9 @@
         <div class="hug-card">
             <div class="hugging-title">Hugging time!</div>
             
-            <div class="hug-animation-box" id="hugBox">
+            <div class="hug-photo-box">
                 <div class="hearts-pop">💖💖💖</div>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="char char-left" alt="character">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="char char-right" alt="character">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="photo-img" alt="hug-photo">
             </div>
 
             <div class="sent-btn">Sent with love!</div>
@@ -236,7 +224,6 @@
         const noBtn = document.getElementById('noBtn');
         const slide1 = document.getElementById('slide1');
         const slide2 = document.getElementById('slide2');
-        const hugBox = document.getElementById('hugBox');
 
         // Fungsi No Menghindar
         function moveButton() {
@@ -248,21 +235,16 @@
             noBtn.style.top = randomY + 'px';
         }
 
-        noBtn.addEventListener('mouseenter', moveButton);
+        noBtn.addEventListener('mouseover', moveButton);
         noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveButton(); });
 
         // Fungsi Yes
         function showSlide2() {
             slide1.classList.add('hidden');
             slide2.classList.remove('hidden');
-            
-            // Memberi jeda kecil agar transisi slide selesai, lalu pelukan
-            setTimeout(() => {
-                hugBox.classList.add('hugging');
-            }, 300);
         }
 
-        // Particle Hati
+        // Particle Hati Background
         const canvas = document.getElementById('hearts-canvas');
         const ctx = canvas.getContext('2d');
         let hearts = [];
@@ -273,9 +255,7 @@
         }
 
         class Heart {
-            constructor() {
-                this.reset();
-            }
+            constructor() { this.reset(); }
             reset() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
