--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             align-items: center;
             gap: 20px;
             margin-top: 20px;
-            min-height: 100px; /* Ruang untuk tombol No menghindar */
         }
 
         .btn {
@@ -95,7 +94,38 @@
             position: absolute;
             box-shadow: 0 8px 0 #495057;
             z-index: 999;
-            transition: left 0.2s ease, top 0.2s ease;
+        }
+
+        /* LOADING SCREEN */
+        #loading-screen {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .loading-text {
+            font-family: 'Pacifico', cursive;
+            color: #d63384;
+            font-size: 2rem;
+            margin-bottom: 20px;
+            animation: bounce 1s infinite;
+        }
+
+        .progress-bar {
+            width: 250px;
+            height: 20px;
+            background: #ffccd5;
+            border-radius: 10px;
+            overflow: hidden;
+            border: 3px solid white;
+        }
+
+        .progress-fill {
+            width: 0%;
+            height: 100%;
+            background: #ff4d6d;
+            transition: width 0.1s linear;
         }
 
         /* SLIDE 2 */
@@ -131,39 +161,10 @@
             justify-content: space-between;
         }
 
-        .hugging-title {
-            color: #d63384;
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-top: 10px;
-        }
-
-        .hug-photo-box {
-            position: relative;
-            width: 100%;
-            height: 180px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
         .photo-img {
-            width: 180px; /* Ukuran foto diam */
+            width: 180px;
             height: auto;
             border-radius: 10px;
-        }
-
-        .hearts-pop {
-            position: absolute;
-            top: 0;
-            font-size: 1.5rem;
-            animation: popUp 1.5s infinite;
-        }
-
-        @keyframes popUp {
-            0% { opacity: 0; transform: translateY(0) scale(0.5); }
-            50% { opacity: 1; transform: translateY(-30px) scale(1.2); }
-            100% { opacity: 0; transform: translateY(-50px) scale(1); }
         }
 
         .sent-btn {
@@ -176,16 +177,23 @@
             margin-bottom: 10px;
         }
 
-        .bottom-text {
-            margin-top: 30px;
-            color: #d63384;
-            font-size: 1.2rem;
-            font-weight: bold;
+        /* ANIMASI MERIAH */
+        .confetti {
+            position: fixed;
+            width: 10px;
+            height: 10px;
+            background-color: #f00;
+            z-index: 100;
+            pointer-events: none;
         }
 
-        @media (max-width: 480px) {
-            h1.main-title { font-size: 1.8rem; }
-            .btn { padding: 12px 30px; font-size: 1.2rem; }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+
+        @keyframes fall {
+            to { transform: translateY(100vh) rotate(720deg); }
         }
     </style>
 </head>
@@ -197,8 +205,15 @@
         <div class="dear-someone">Dear Someone</div>
         <h1 class="main-title">Will you be my Valentine?</h1>
         <div class="btn-group">
-            <button class="btn btn-yes" onclick="showSlide2()">YES!</button>
+            <button class="btn btn-yes" onclick="startLoading()">YES!</button>
             <button class="btn btn-no" id="noBtn">No</button>
+        </div>
+    </div>
+
+    <div class="container hidden" id="loading-screen">
+        <div class="loading-text">Sending virtual hug...</div>
+        <div class="progress-bar">
+            <div class="progress-fill" id="fill"></div>
         </div>
     </div>
 
@@ -207,41 +222,70 @@
         <h2 class="yay-text">Yay! I knew you'd say yes!</h2>
 
         <div class="hug-card">
-            <div class="hugging-title">Hugging time!</div>
-            
-            <div class="hug-photo-box">
-                <div class="hearts-pop">💖💖💖</div>
+            <h3 style="color: #d63384; font-weight: bold; margin-top: 10px;">Hugging time!</h3>
+            <div style="position: relative;">
+                <div id="heart-burst" style="position: absolute; width: 100%; text-align: center; top: -20px; font-size: 2rem;">💖</div>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="photo-img" alt="hug-photo">
             </div>
-
             <div class="sent-btn">Sent with love!</div>
         </div>
 
-        <div class="bottom-text">You've made me the happiest! 💕</div>
+        <div class="bottom-text" style="margin-top: 20px; color: #d63384; font-weight: bold; font-size: 1.2rem;">You've made me the happiest! 💕</div>
     </div>
 
     <script>
         const noBtn = document.getElementById('noBtn');
         const slide1 = document.getElementById('slide1');
         const slide2 = document.getElementById('slide2');
+        const loadingScreen = document.getElementById('loading-screen');
+        const fill = document.getElementById('fill');
 
         // Fungsi No Menghindar
         function moveButton() {
             const maxX = window.innerWidth - noBtn.offsetWidth - 50;
             const maxY = window.innerHeight - noBtn.offsetHeight - 50;
-            const randomX = Math.max(50, Math.floor(Math.random() * maxX));
-            const randomY = Math.max(50, Math.floor(Math.random() * maxY));
-            noBtn.style.left = randomX + 'px';
-            noBtn.style.top = randomY + 'px';
+            noBtn.style.left = Math.max(50, Math.floor(Math.random() * maxX)) + 'px';
+            noBtn.style.top = Math.max(50, Math.floor(Math.random() * maxY)) + 'px';
         }
-
         noBtn.addEventListener('mouseover', moveButton);
         noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveButton(); });
 
-        // Fungsi Yes
-        function showSlide2() {
+        // Fungsi Loading & Animasi Meriah
+        function startLoading() {
             slide1.classList.add('hidden');
+            loadingScreen.style.display = 'flex';
+            
+            let width = 0;
+            const interval = setInterval(() => {
+                if (width >= 100) {
+                    clearInterval(interval);
+                    showSlide2();
+                } else {
+                    width++;
+                    fill.style.width = width + '%';
+                }
+            }, 30); // 3 detik loading
+        }
+
+        function showSlide2() {
+            loadingScreen.style.display = 'none';
             slide2.classList.remove('hidden');
+            createConfetti();
+        }
+
+        function createConfetti() {
+            const colors = ['#ff4d6d', '#ffccd5', '#ff8fa3', '#c9184a', '#ffb3c1'];
+            for (let i = 0; i < 100; i++) {
+                const confetti = document.createElement('div');
+                confetti.className = 'confetti';
+                confetti.style.left = Math.random() * 100 + 'vw';
+                confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                confetti.style.width = Math.random() * 10 + 5 + 'px';
+                confetti.style.height = confetti.style.width;
+                confetti.style.animation = `fall ${Math.random() * 3 + 2}s linear forwards`;
+                document.body.appendChild(confetti);
+                setTimeout(() => confetti.remove(), 5000);
+            }
         }
 
         // Particle Hati Background
@@ -286,9 +330,7 @@
         }
 
         window.addEventListener('resize', resize);
-        resize();
-        init();
-        animate();
+        resize(); init(); animate();
     </script>
 </body>
 </html>
